Fix more lint issues, add javadoc to main classes