@@ -22,8 +22,8 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.compress.archivers.ArchiveEntry;
@@ -38,28 +38,51 @@ import dk.mada.backup.restore.VariableName;
 import dk.mada.backup.splitter.SplitterOutputStream;
 
 /**
- * Code from the original spike exploration of the solution. TODO: Needs to be
- * rewritten/split up.
+ * Code from the original spike exploration of the solution.
+ * TODO: Needs to be rewritten/split up.
  */
 public class MainExplore {
+    /** File scanning buffer size. */
+    private static final int FILE_SCAN_BUFFER_SIZE = 8192;
     private static final Logger logger = LoggerFactory.getLogger(MainExplore.class);
-    private Path rootDir;
-
-    private List<DirInfo> fileElements = new ArrayList<>();
-    private final String recipientKeyId;
-    private final Map<String, String> gpgEnvOverrides;
-    private final long maxTarSize;
-
-    private long totalInputSize;
+    /** File permissions used for temporary files used while creating backup. */
     private static final FileAttribute<Set<PosixFilePermission>> ATTR_PRIVATE_TO_USER = PosixFilePermissions
             .asFileAttribute(PosixFilePermissions.fromString("rwx------"));
 
-    public MainExplore(String recipientKeyId, Map<String, String> gpgEnvOverrides, long maxTarSize) {
+    /** The backup root directory. */
+    private Path rootDir;
+    /** Information about the directories included in the backup. */
+    private List<DirInfo> fileElements = new ArrayList<>();
+    /** GPG key used for encryption of the backup. */
+    private final String recipientKeyId;
+    /** Environment overrides used when invoking external GPG process. */
+    private final Map<String, String> gpgEnvOverrides;
+    /** Size limit for crypt-files. */
+    private final long maxCryptFileSize;
+    /** Total size of the files in the backup (does not include directory sizes). */
+    private long totalInputSize;
+
+    /**
+     * Creates a new instance.
+     *
+     * @param recipientKeyId the GPG key used for encryption of the backup
+     * @param gpgEnvOverrides the environment overrides used when invoking external GPG process
+     * @param maxCryptFileSize the size limit for crypt-files
+     */
+    public MainExplore(String recipientKeyId, Map<String, String> gpgEnvOverrides, long maxCryptFileSize) {
         this.recipientKeyId = recipientKeyId;
         this.gpgEnvOverrides = gpgEnvOverrides;
-        this.maxTarSize = maxTarSize;
+        this.maxCryptFileSize = maxCryptFileSize;
     }
 
+    /**
+     * Create a backup from a directory.
+     *
+     * @param srcDir the backup root directory
+     * @param targetDir the target directory for the encrypted backup files
+     * @param name the backup name
+     * @return the generated restore script
+     */
     public Path packDir(Path srcDir, Path targetDir, String name) {
         rootDir = srcDir;
         if (!Files.isDirectory(rootDir)) {
@@ -76,29 +99,31 @@ public class MainExplore {
         List<BackupElement> archiveElements;
         Future<List<Path>> outputFilesFuture;
         try (Stream<Path> files = Files.list(rootDir);
-                SplitterOutputStream sos = new SplitterOutputStream(targetDir, name, ".crypt", maxTarSize);
+                SplitterOutputStream sos = new SplitterOutputStream(targetDir, name, ".crypt", maxCryptFileSize);
                 GpgEncryptedOutputStream eos = new GpgEncryptedOutputStream(sos, recipientKeyId, gpgEnvOverrides);
                 TarArchiveOutputStream tarOs = makeTarOutputStream(eos)) {
 
             archiveElements = files
                     .sorted(filenameSorter())
                     .map(p -> processRootElement(tarOs, p))
-                    .collect(Collectors.toList());
+                    .toList();
 
             outputFilesFuture = sos.getOutputFiles();
 
             logger.info("Waiting for backup streaming to complete...");
         } catch (IOException e) {
-            logger.warn("BAD", e);
-            throw new IllegalStateException("Failed processing", e);
+            throw new UncheckedIOException("Failed processing", e);
         }
 
         List<FileInfo> cryptElements;
         try {
             cryptElements = outputFilesFuture.get().stream()
                     .map(archiveFile -> FileInfo.fromCryptFile(targetDir, archiveFile))
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
+                    .toList();
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new IllegalStateException("Interrupted getting output files", e);
+        } catch (ExecutionException e) {
             throw new IllegalStateException("Failed to lazy get output files", e);
         }
 
@@ -135,7 +160,6 @@ public class MainExplore {
 
     private FileInfo processFile(TarArchiveOutputStream tarOs, Path file) {
         return copyToTar(file, tarOs);
-
     }
 
     private FileInfo processDir(TarArchiveOutputStream tarOs, Path dir) {
@@ -168,7 +192,7 @@ public class MainExplore {
                         .sorted(filenameSorter())
                         .filter(Files::isRegularFile)
                         .map(f -> copyToTar(f, tarForDirOs))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 return DirInfo.from(rootDir, dir, containedFiles);
             }
@@ -195,7 +219,7 @@ public class MainExplore {
     }
 
     private FileInfo copyToTar(Path file, String inArchiveName, TarArchiveOutputStream tos, boolean countsTowardsSize) {
-        byte[] buffer = new byte[8192];
+        byte[] buffer = new byte[FILE_SCAN_BUFFER_SIZE];
 
         try (InputStream is = Files.newInputStream(file); BufferedInputStream bis = new BufferedInputStream(is)) {
             long size = Files.size(file);
